--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-generator": "^4.16.1",
-    "nodemon": "^2.0.7",
     "@fortawesome/fontawesome-free": "5.15.3",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "datatables.net-bs4": "1.10.24",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-generator": "^4.16.1",
+    "express-session": "^1.17.2",
     "jquery": "3.6.0",
-    "jquery.easing": "^1.4.1"
+    "jquery.easing": "^1.4.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1"
   },
   "devDependencies": {
     "browser-sync": "2.26.14",
