--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
+    "cookie-parser": "^1.4.5",
     "datatables.net-bs4": "1.10.24",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -17,7 +19,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-kakao": "^1.0.1"
+    "passport-kakao": "^1.0.1",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "browser-sync": "2.26.14",
