--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "datatables.net-bs4": "1.10.24",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-generator": "^4.16.1",
     "express-session": "^1.17.2",
     "jquery": "3.6.0",
