--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
